--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
 		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"use-debounce": "^10.0.5",
-		"zod": "^4.0.17"
+		"uuid": "^11.1.0",
+		"zod": "^4.0.17",
+		"zod-form-data": "^3.0.0"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
