--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
 	"dependencies": {
 		"@auth0/nextjs-auth0": "^4.13.0",
 		"@prisma/client": "6.14.0",
+		"@radix-ui/react-checkbox": "^1.3.3",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.8",
+		"@radix-ui/react-radio-group": "^1.3.8",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.4",
+		"@radix-ui/react-switch": "^1.2.6",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.554.0",
